# warframe

./: CMakeLists.txt  README.md  vcpkg.json
example/: CMakeLists.txt  main.cpp
include/: decoder.h  encoder.h  eventbus.h  gateway.h  gateway_event_processor.h  heartbeat.h  library.h  payload.h  socket.h
include/erlpack/: constants.h  decoder.h  encoder.h  sysdep.h
include/event-emitter/: eventdata.h  eventemitter.h  eventmessage.h  hello-event.h  messagetype.h
include/gateway/v10/: deserializable.h  serializable.h
include/gateway/v10/payloads/: hello.h  identify.h  payload-data.h  payload.h
include/gatewayevents/: gateway_data.h  hello_gateway_event.h  identify_gateway_event.h  payload.h  serializable.h
src/: gateway.cpp  library.cpp  socket.cpp
